unpackaged/main/default/objects/ServiceResource/fields/Allocated_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Allocated_to_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated to Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>