unpackaged/main/default/objects/ServiceResource/fields/Aspect_Equipment_List__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Equipment_List__c</fullName>
    <label>Aspect Equipment List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>