unpackaged/main/default/objects/ServiceResource/fields/Aspect_ID_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Aspect_ID_Card_Status__c</fullName>
    <label>Aspect ID Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Issued</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>