unpackaged/main/default/objects/ServiceResource/fields/Auto_Booking_Resource__c.field-meta.xml
<CustomField>
    <fullName>Auto_Booking_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Booking Resource</label>
    <type>Checkbox</type>
</CustomField>