unpackaged/main/default/objects/ServiceResource/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>This is the Franchisee&#39;s Account Number</description>
    <inlineHelpText>This is the Franchisee&#39;s Account Number</inlineHelpText>
    <label>Bank Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>