unpackaged/main/default/objects/ServiceResource/fields/Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Characteristics__c</fullName>
    <label>Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Characteristics</valueSetName>
    </valueSet>
</CustomField>