unpackaged/main/default/objects/ServiceResource/fields/Children_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>Children_s_Gender__c</fullName>
    <label>Children&#39;s Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Both Male and Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>