unpackaged/main/default/objects/ServiceResource/fields/CIS_Deduction_Rate__c.field-meta.xml
<CustomField>
    <fullName>CIS_Deduction_Rate__c</fullName>
    <description>Deduction calculation for labour. Required for Crystal Tax.</description>
    <label>CIS Deduction Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>