unpackaged/main/default/objects/ServiceResource/fields/CIS_No__c.field-meta.xml
<CustomField>
    <fullName>CIS_No__c</fullName>
    <description>Sub Contractor Industry scheme. Required for Crystal Tax.</description>
    <label>CIS No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>