unpackaged/main/default/objects/ServiceResource/fields/Community_App_Trained__c.field-meta.xml
<CustomField>
    <fullName>Community_App_Trained__c</fullName>
    <label>Community App Trained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Required</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Trained</fullName>
                <isActive>false</isActive>
                <label>Trained</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>