unpackaged/main/default/objects/ServiceResource/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>This is the Company Name of the Engineer. Required for Crystal Tax.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>