unpackaged/main/default/objects/ServiceResource/fields/Core_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Core_Skill_Set__c</fullName>
    <label>Core Skill Set %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>