unpackaged/main/default/objects/ServiceResource/fields/Crystal_Tax_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Crystal_Tax_External_Id__c</fullName>
    <description>Crystal Tax external id</description>
    <externalId>true</externalId>
    <label>Crystal Tax External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>