unpackaged/main/default/objects/ServiceResource/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Resource birth date</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>