unpackaged/main/default/objects/ServiceResource/fields/Date_of_VAT_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_VAT_Registration__c</fullName>
    <description>Date the VAT registration took place</description>
    <label>Date of VAT Registration</label>
    <type>Date</type>
</CustomField>