unpackaged/main/default/objects/ServiceResource/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Resource Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>