unpackaged/main/default/objects/ServiceResource/fields/Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_No__c</fullName>
    <description>Employee Number used for pay purposes</description>
    <label>Employee No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>