unpackaged/main/default/objects/ServiceResource/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>E.g. Temp, Aspect, Subcontractor, PM</description>
    <inlineHelpText>E.g. Temp, Aspect, Subcontractor, PM</inlineHelpText>
    <label>Employment Type (Status)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employment_Type</valueSetName>
    </valueSet>
</CustomField>