unpackaged/main/default/objects/ServiceResource/fields/Engineer_Real_Time_Payslip_URL__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Real_Time_Payslip_URL__c</fullName>
    <formula>IF(NOT(ISPICKVAL( Engineer_Role__c,&quot;Franchisee&quot;)),&quot;https://salesforce.123formbuilder.com/form-4857693/?RecordID=&quot;&amp; Id,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineer Real Time Payslip URL</label>
    <type>Text</type>
</CustomField>