unpackaged/main/default/objects/ServiceResource/fields/Engineer_Role__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Role__c</fullName>
    <description>The main role the resource takes</description>
    <label>Engineer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engineer_Type</valueSetName>
    </valueSet>
</CustomField>