unpackaged/main/default/objects/ServiceResource/fields/Engineer_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineer&#39;s ID</label>
    <type>Text</type>
</CustomField>