unpackaged/main/default/objects/ServiceResource/fields/Estimate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Limit__c</fullName>
    <description>Created in relation to Monday task &#39;Conditions to bypass ONSA App - to send to office - for validtion prior to sending&#39;.</description>
    <label>Estimate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>