unpackaged/main/default/objects/ServiceResource/fields/Exchequer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_External_Id__c</fullName>
    <description>Exchequer external id</description>
    <externalId>true</externalId>
    <label>Exchequer External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>