unpackaged/main/default/objects/ServiceResource/fields/Exclude_EPR_Automatic__c.field-meta.xml
<CustomField>
    <fullName>Exclude_EPR_Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude from EPR Batch processes</description>
    <inlineHelpText>Exclude from EPR Batch processes</inlineHelpText>
    <label>Exclude EPR Automatic</label>
    <type>Checkbox</type>
</CustomField>