unpackaged/main/default/objects/ServiceResource/fields/Field_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Field_Assessment__c</fullName>
    <label>Field Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Assessment</valueSetName>
    </valueSet>
</CustomField>