unpackaged/main/default/objects/ServiceResource/fields/Field_Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Manager__c</fullName>
    <label>Field Support Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lee</fullName>
            </value>
            <value>
                <fullName>Jess</fullName>
            </value>
            <value>
                <fullName>Mark</fullName>
            </value>
            <value>
                <fullName>Chris</fullName>
            </value>
            <value>
                <fullName>Carl</fullName>
            </value>
            <value>
                <fullName>Matt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>