unpackaged/main/default/objects/ServiceResource/fields/Final_Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Sent_Date__c</fullName>
    <label>Final Report Sent Date</label>
    <type>DateTime</type>
</CustomField>