unpackaged/main/default/objects/ServiceResource/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Resource first name</description>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>