unpackaged/main/default/objects/ServiceResource/fields/Fixed_Price_Work_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Work_Sheet__c</fullName>
    <label>Workmanship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>