unpackaged/main/default/objects/ServiceResource/fields/For_Scheduling_Resource__c.field-meta.xml
<CustomField>
    <fullName>For_Scheduling_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to control which SRs are shown as options when running dispatcher using the &quot;For Scheduling&quot; scheduling policy. Set this field to TRUE to have this SR included.</description>
    <inlineHelpText>This field is used to control which SRs are shown as options when running dispatcher using the &quot;For Scheduling&quot; scheduling policy. Set this field to TRUE to have this SR included.</inlineHelpText>
    <label>For Scheduling Resource</label>
    <type>Checkbox</type>
</CustomField>