unpackaged/main/default/objects/ServiceResource/fields/Formula_Retention_Held__c.field-meta.xml
<CustomField>
    <fullName>Formula_Retention_Held__c</fullName>
    <formula>- Total_Retention_Deductions__c -  Total_Retention_Refunds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Retention Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>