unpackaged/main/default/objects/ServiceResource/fields/FPWA__c.field-meta.xml
<CustomField>
    <fullName>FPWA__c</fullName>
    <description>Changed the label as per Alex bacon</description>
    <label>Attendance / Punctuality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Not Acceptable</fullName>
            </value>
            <value>
                <fullName>In Training</fullName>
                <isActive>false</isActive>
                <label>In Training</label>
            </value>
            <value>
                <fullName>Not Trained</fullName>
                <isActive>false</isActive>
                <label>Not Trained</label>
            </value>
            <value>
                <fullName>Trained</fullName>
                <isActive>false</isActive>
                <label>Trained</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>