unpackaged/main/default/objects/ServiceResource/fields/Franchisee_Company__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_Company__c</fullName>
    <inlineHelpText>Information purposes only.</inlineHelpText>
    <label>Franchisee Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Franchisee</valueSetName>
    </valueSet>
</CustomField>