unpackaged/main/default/objects/ServiceResource/fields/Gas_safe_engineer_license_number__c.field-meta.xml
<CustomField>
    <fullName>Gas_safe_engineer_license_number__c</fullName>
    <description>This license number can be found on the operative&#39;s Gas Safety ID Card.</description>
    <label>Gas safe engineer license number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>