unpackaged/main/default/objects/ServiceResource/fields/General_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>General Ledger Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>