unpackaged/main/default/objects/ServiceResource/fields/Happy_to_Activate_in_future__c.field-meta.xml
<CustomField>
    <fullName>Happy_to_Activate_in_future__c</fullName>
    <label>Happy to Activate in future</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes please</fullName>
            </value>
            <value>
                <fullName>Not Ideal</fullName>
            </value>
            <value>
                <fullName>Never again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>