unpackaged/main/default/objects/ServiceResource/fields/Headshot_Status__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Status__c</fullName>
    <label>Headshot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Headshot_Status</valueSetName>
    </valueSet>
</CustomField>