unpackaged/main/default/objects/ServiceResource/fields/Hobbies_Text__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Text__c</fullName>
    <label>Hobbies Text</label>
    <type>TextArea</type>
</CustomField>