unpackaged/main/default/objects/ServiceResource/fields/InSync_External_Id__c.field-meta.xml
<CustomField>
    <fullName>InSync_External_Id__c</fullName>
    <description>In Sync external id</description>
    <externalId>true</externalId>
    <label>InSync External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>