unpackaged/main/default/objects/ServiceResource/fields/Is_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Active__c</fullName>
    <formula>RelatedRecord.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (Formula)</label>
    <type>Checkbox</type>
</CustomField>