unpackaged/main/default/objects/ServiceResource/fields/Ladder_Type__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Type__c</fullName>
    <label>Ladder Type</label>
    <type>TextArea</type>
</CustomField>