unpackaged/main/default/objects/ServiceResource/fields/Laptop__c.field-meta.xml
<CustomField>
    <fullName>Laptop__c</fullName>
    <label>Laptop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>