unpackaged/main/default/objects/ServiceResource/fields/Laptop_Status__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Status__c</fullName>
    <label>Laptop Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>