unpackaged/main/default/objects/ServiceResource/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Resource last name</description>
    <label>LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>