unpackaged/main/default/objects/ServiceResource/fields/Leak_Detection_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Leak_Detection_Equipment__c</fullName>
    <label>Leak Detection Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Leak_Detection_Equipment</valueSetName>
    </valueSet>
</CustomField>