unpackaged/main/default/objects/ServiceResource/fields/Leave_Retire_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Retire_Date__c</fullName>
    <description>Leave or Retire date of the Resource</description>
    <label>Leave/Retire Date</label>
    <type>Date</type>
</CustomField>