unpackaged/main/default/objects/ServiceResource/fields/Main_Trade_Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Main_Trade_Experience_in_Years__c</fullName>
    <label>Main Trade Experience in Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>