unpackaged/main/default/objects/ServiceResource/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <description>Resource Mobile No</description>
    <label>Mobile No</label>
    <type>Phone</type>
</CustomField>