unpackaged/main/default/objects/ServiceResource/fields/Months_Since_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Start_Date__c</fullName>
    <formula>IF(
(TODAY() - Start_Date__c) / 365 * 12 &lt; 1, 1, (TODAY() - Start_Date__c) / 365 * 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Since Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>