unpackaged/main/default/objects/ServiceResource/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality of Service Resource</description>
    <inlineHelpText>Nationality of Service Resource</inlineHelpText>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>