unpackaged/main/default/objects/ServiceResource/fields/New_Rates__c.field-meta.xml
<CustomField>
    <fullName>New_Rates__c</fullName>
    <label>New Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Rates</valueSetName>
    </valueSet>
</CustomField>