unpackaged/main/default/objects/ServiceResource/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <description>National Insurance Number of the Service Resource. NI Number is 9 characters but allowance is made to have spaces.</description>
    <label>NI Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>