unpackaged/main/default/objects/ServiceResource/fields/Op_Status__c.field-meta.xml
<CustomField>
    <fullName>Op_Status__c</fullName>
    <label>Op Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Rookie</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>High Performer</fullName>
            </value>
            <value>
                <fullName>Senior Operative - Official</fullName>
            </value>
            <value>
                <fullName>Performance Plan*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>