unpackaged/main/default/objects/ServiceResource/fields/Operative_KPI_Update__c.field-meta.xml
<CustomField>
    <fullName>Operative_KPI_Update__c</fullName>
    <label>Operative KPI Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Working on it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>