unpackaged/main/default/objects/ServiceResource/fields/Ops_Manager_Verified__c.field-meta.xml
<CustomField>
    <fullName>Ops_Manager_Verified__c</fullName>
    <label>Ops Manager Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>