unpackaged/main/default/objects/ServiceResource/fields/Pat_Testing__c.field-meta.xml
<CustomField>
    <fullName>Pat_Testing__c</fullName>
    <label>Pat Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>