unpackaged/main/default/objects/ServiceResource/fields/Pay_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pay_Frequency__c</fullName>
    <description>Resource payment frequency</description>
    <label>Pay Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pay_Frequency</valueSetName>
    </valueSet>
</CustomField>