unpackaged/main/default/objects/ServiceResource/fields/Pay_Total_After_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Pay_Total_After_Deductions__c</fullName>
    <formula>(Payroll_New_Requisitions__c + Payroll_Approved_Requisitions__c + Payroll_Processed_Requisitions_Labour__c + Payroll_Paid_Requisitions__c ) - ( Payroll_New_Deductions__c +   Payroll_Approved_Deductions__c  + Payroll_Processed_Deductions_Other__c  + Payroll_Paid_Deductions__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New ,Processed, Approved, Paid</inlineHelpText>
    <label>Pay Total After Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>