unpackaged/main/default/objects/ServiceResource/fields/Payment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>