unpackaged/main/default/objects/ServiceResource/fields/Payroll_New_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Payroll_New_Deductions__c</fullName>
    <label>New Deductions Total</label>
    <summarizedField>Deduction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Deduction__c.Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Deduction__c.Service_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>