unpackaged/main/default/objects/ServiceResource/fields/Payroll_New_Requisitions__c.field-meta.xml
<CustomField>
    <fullName>Payroll_New_Requisitions__c</fullName>
    <label>New Requisitions Total</label>
    <summarizedField>Engineer_Pay_Requisition__c.Pay_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Engineer_Pay_Requisition__c.Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Engineer_Pay_Requisition__c.Service_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>