unpackaged/main/default/objects/ServiceResource/fields/Payroll_Processed_Deductions_Bonus_Fines__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Processed_Deductions_Bonus_Fines__c</fullName>
    <label>Processed Deductions Bonus/Fines Total</label>
    <summarizedField>Deduction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Deduction__c.Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Deduction__c.Deduction_Type__c</field>
        <operation>equals</operation>
        <value>Bonus/Fines</value>
    </summaryFilterItems>
    <summaryForeignKey>Deduction__c.Service_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>